{
    "name": "New Controls",
    "maps": [
        {
            "name": "LX",
            "id": "252261d0-6eec-42bc-80a9-06887748c229",
            "actions": [
                {
                    "name": "New action",
                    "type": "PassThrough",
                    "id": "a8524c2a-5fbb-4b2b-8821-1fb5ddebc16e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "5807c138-7122-41f1-94d9-7c00725b431f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "89125ab4-ad27-450b-ae4f-c27db813f7f6",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e238c8ab-1fec-4ee2-8035-9cb1a39262ec",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "LY",
            "id": "7a4e0b66-2487-48e5-abe8-d1ea9c388d12",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "40d90c55-526d-46d9-a8b2-b451304874b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "6013f1fe-aa3c-42a0-af54-ed038f18c9ac",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e9b4cc47-9a2e-4400-b390-c46fda51f33b",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "379ce4bd-d256-49a0-9b00-0c2baffef7a4",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "RX",
            "id": "eb14eb66-4b8d-4957-95e0-840f4876b924",
            "actions": [
                {
                    "name": "New action1",
                    "type": "Button",
                    "id": "3defb47c-7a46-41b3-bd7b-04ff23fc4cf0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "8fe3856b-fb84-4ba0-864e-03e98d096c81",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "76fe2272-1718-45c0-bf23-032df2c1857a",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "671990a7-ac41-4753-8aa4-50cf57406030",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action1",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "RY",
            "id": "ffed7141-614c-4887-a56a-275759f53cc9",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "e9330986-1c09-4b7f-93d1-7afa2e29c8a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "89c315b6-4bee-4c9a-ba35-f048258b18f7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "20cdc3f9-b222-4402-b48f-40fcaab69513",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4df9b70c-c2c8-481f-b00f-ff2bca1498c8",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "A",
            "id": "8fcb56ae-5a3d-4f6f-bfe3-59a5f844959e",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "9a4b5485-e7a1-4d41-8e29-07029a23843b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "07575266-147d-44f9-adfe-a6547fdd300e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "X",
            "id": "9155b3eb-1de9-45d7-9a89-a8e4cdfb5598",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "31631df4-5a9a-463a-94e6-03a99e06e623",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2c09a80e-d69f-4dcc-a1e4-4e7911a89850",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Y",
            "id": "75b95b8a-11d4-4b23-90f3-2116cbb27982",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "25202575-666a-4245-8bd7-5ccd05ed6cb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "63812cc9-96f1-481d-95c5-d26ba632d1ad",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "B",
            "id": "7103d1c2-3e07-492c-8f1f-daadc678d6e8",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "bbedf360-73be-4ae4-8fff-6bd65d8d8e69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5790b9a3-0252-4347-b69c-a73a6019e5b1",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DPadD",
            "id": "b1e6900f-57d9-4d67-9309-9ec798c07c32",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "9246d8fb-7590-40ec-a05e-3606170c07c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9ef12ead-7b05-43a8-b640-e53333892acc",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DPadU",
            "id": "373a1d7d-ea24-405c-9524-2e040bf96dae",
            "actions": [
                {
                    "name": "New action",
                    "type": "Value",
                    "id": "8322a348-6920-45c7-aa0b-7ac5150810ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9ee9f6bc-8d3b-4b81-b4a7-7496a624adb1",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DPadR",
            "id": "f1c9d498-da06-4abd-af3f-fca3a0197b03",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "5645df34-077e-4127-8dc1-a631b69ed3fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "76a60f2f-20e2-480e-ac83-b5e08382bc6f",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DPadL",
            "id": "e0af21dd-f977-432d-a8c4-7fa797e5796b",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "1f5f2e96-af43-4fc8-b739-58a226af266b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "694ee6eb-ec81-4f57-8682-6a03b6983d77",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TriggerR",
            "id": "32563c99-3390-4800-b0bf-839a61c02bcd",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "9229d02f-aa4c-46f8-b4fc-38ee17177080",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f6aa88f2-92c5-450e-81f9-055af1fde60b",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TriggerL",
            "id": "dd8cfdbc-e786-4f1f-a1e6-79bdeb209fb3",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "aae78a92-a552-4123-b1d2-50485843b04c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "79f01589-ffed-4985-903d-86a4fcea2637",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BumperR",
            "id": "4df04f2b-ff3f-4e67-891a-fecd319d3800",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "0d84086a-784a-48c7-b37e-9fc19842375a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "01ec70fc-0bce-4bd6-8727-577efe5741a9",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BumperL",
            "id": "e109fa77-d17d-4149-92f3-8e3572c850b3",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "ab249e8b-f2af-46dd-9ba0-e9bb6d698c39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b2af4bd6-1a84-42a6-9344-1b03891510cc",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "XboxController",
            "bindingGroup": "XboxController",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}